# fomo100

./: .gitignore  Anchor.toml  Cargo.toml  README.md  calculate_reward_data.md  improve(1).js  improve_example_4.js  improve_example_5.js  lint.sh  owner_dev.json  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: general.rs  instructions.rs  main.rs  math.rs  nft.rs  service.rs  state.rs  utils.rs
programs/fomo100/: Cargo.toml
programs/fomo100/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/fomo100/src/instructions/: cancel_unlock.rs  claim.rs  create_pool.rs  expand_pool_state.rs  mod.rs  set_round_reward.rs  stake.rs  unlock.rs  unstake.rs
programs/fomo100/src/interface/: create_collection.rs  mint_by_coin.rs  set_admin.rs  set_price.rs
programs/fomo100/src/nft/: init_airdrop.rs  mint_by_sol.rs  mod.rs
tests/: anchor-escrow.ts
