[package]
name = "anchor_cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anchor-client = { version = "0.31.1", features = ["debug"] }
anyhow = "1.0.32"
borsh = "0.10.4"
chrono = "0.4"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
mpl-token-metadata = "5.1.0"
rand = "0.7.3"
serde_json = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.0"
solana-account-decoder = "2.2.0"
solana-client = "2.2.0"
solana-sdk = "2.2.0"
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
spl-token = "^8.0.0"
fomo100 = { path = "../programs/fomo100", features = ["no-entrypoint"] }
ed25519-dalek = "1.0.1"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
hex = "0.4.3"
